[1272] Fix "Add nested existing element" for TransitionUsage owners
* The source and the target of all owned TransitionUsages should be
added when applying "Add nested existing elements"
* This commit also fix the duplication of TransitionUsage edges if its
source or target is displayed more than once.

Bug: https://github.com/eclipse-syson/syson/issues/1272
Signed-off-by: Arthur Daussy <arthur.daussy@obeo.fr>